--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
 <body>
     <div class="preview"></div>
 
-    <script src="imu.js"></script>
+    <script src="imu.umd.js"></script>
 
     <script>
         // Usage example
